@startuml

title __BASE's Class Diagram__\n

  namespace com.architectica.socialcomponents {
    namespace main.base {
      abstract class com.architectica.socialcomponents.main.base.BaseActivity {
          + TAG : String
          + actionBar : ActionBar
          + progressDialog : ProgressDialog
          - backPressedTime : long
          + attemptToExitIfRoot()
          + attemptToExitIfRoot()
          + checkAuthorization()
          + hasInternetConnection()
          + hideKeyboard()
          + hideProgress()
          + onOptionsItemSelected()
          + showNotCancelableWarningDialog()
          + showProgress()
          + showProgress()
          + showSnackBar()
          + showSnackBar()
          + showSnackBar()
          + showToast()
          + showToast()
          + showWarningDialog()
          + showWarningDialog()
          + showWarningDialog()
          + showWarningDialog()
          + startLoginActivity()
          # onCreate()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.base {
      abstract class com.architectica.socialcomponents.main.base.BaseFragment {
          + finish()
          + hasInternetConnection()
          + hideKeyboard()
          + hideProgress()
          + showNotCancelableWarningDialog()
          + showProgress()
          + showProgress()
          + showSnackBar()
          + showSnackBar()
          + showSnackBar()
          + showToast()
          + showToast()
          + showWarningDialog()
          + showWarningDialog()
          + showWarningDialog()
          + showWarningDialog()
          + startLoginActivity()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.base {
      interface com.architectica.socialcomponents.main.base.BaseFragmentView {
          {abstract} + hasInternetConnection()
          {abstract} + hideProgress()
          {abstract} + showProgress()
          {abstract} + showProgress()
          {abstract} + showSnackBar()
          {abstract} + showSnackBar()
          {abstract} + showSnackBar()
          {abstract} + showToast()
          {abstract} + showToast()
          {abstract} + showWarningDialog()
          {abstract} + showWarningDialog()
          {abstract} + startLoginActivity()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.base {
      class com.architectica.socialcomponents.main.base.BasePresenter {
          # TAG : String
          # context : Context
          + BasePresenter()
          + checkAuthorization()
          + checkInternetConnection()
          + checkInternetConnection()
          + doAuthorization()
          + hasInternetConnection()
          # getCurrentUserId()
      }
    }
  }
  

  namespace com.architectica.socialcomponents {
    namespace main.base {
      interface com.architectica.socialcomponents.main.base.BaseView {
          {abstract} + finish()
          {abstract} + hideKeyboard()
          {abstract} + hideProgress()
          {abstract} + showNotCancelableWarningDialog()
          {abstract} + showProgress()
          {abstract} + showProgress()
          {abstract} + showSnackBar()
          {abstract} + showSnackBar()
          {abstract} + showSnackBar()
          {abstract} + showToast()
          {abstract} + showToast()
          {abstract} + showWarningDialog()
          {abstract} + showWarningDialog()
          {abstract} + showWarningDialog()
          {abstract} + showWarningDialog()
          {abstract} + startLoginActivity()
      }
    }
  }
  

  com.architectica.socialcomponents.main.base.BaseActivity .up.|> com.architectica.socialcomponents.main.base.BaseView
  com.architectica.socialcomponents.main.base.BaseActivity -up-|> com.hannesdorfmann.mosby3.mvp.MvpActivity
  com.architectica.socialcomponents.main.base.BaseFragment .up.|> com.architectica.socialcomponents.main.base.BaseFragmentView
  com.architectica.socialcomponents.main.base.BaseFragment -up-|> com.hannesdorfmann.mosby3.mvp.MvpFragment
  com.architectica.socialcomponents.main.base.BasePresenter -up-|> com.hannesdorfmann.mosby3.mvp.MvpBasePresenter
  com.architectica.socialcomponents.main.base.BasePresenter o-- com.architectica.socialcomponents.managers.ProfileManager : profileManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
